<resources>
    <string name="app_name">Day05</string>
    <string name="proses">Proses</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="kode_barang">Kode Barang</string>
    <string name="biasa">Biasa</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="muhammad_abdan_quiz_1">Muhammad Abdan Quiz 1</string>
    <string name="bagikan">Bagikan</string>
    <string name="nama_pelanggan_label">Nama Pelanggan:</string>
    <string name="kode_barang_label">Kode Barang:</string>
    <string name="nama_barang_label">Nama Barang:</string>
    <string name="harga_label">Harga:</string>
    <string name="total_harga_label">Total Harga:</string>
    <string name="diskon_harga_label">Diskon Harga:</string>
    <string name="diskon_member_label">Diskon Member:</string>
    <string name="jumlah_bayar_label">Jumlah Bayar:</string>
</resources>